# wspy

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
src/: CMakeLists.txt  wdwl.cpp  wspy.cpp
src/net/: proxy.cpp  proxy.hpp  url.cpp  url.hpp
src/net/http/: client.cpp  client.hpp  downloader.cpp  downloader.hpp  error.hpp  headers.cpp  headers.hpp  request.cpp  request.hpp  response.cpp  response.hpp
src/util/: base64.hpp  files.hpp  strings.hpp
test/: CMakeLists.txt  simple_test.sh
test/net/: CMakeLists.txt  proxy_test.cpp  url_test.cpp
